Repair previously created bugs for alignment

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 
 /* Set background color and font color for circular buttons */
 .btn-lg {
-  background-color: #9db6bd;
   color: #ffffff;
   border: none;
   margin: 5px;
@@ -40,13 +39,13 @@ body {
 
 /* Set background color and font color for active menu link */
 .navbar-light .navbar-nav .nav-link.active {
-  background-color: #ffffff;
+  background-color: #f0f1f1;
   color: #484848;
 }
 
 /* Set active menu link on click */
 .navbar-light .navbar-nav .nav-link:focus {
-  background-color: #ffffff;
+  background-color: #f0f1f1;
   color: #484848;
 }
 
